# mlops

./: README.md  app.py  digit_classifier.pkl  prometheus.yml  pyproject.toml
.ipynb_checkpoints/: test-checkpoint.ipynb
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.json
templates/: index.html
